Complete lab_01
